changed a way of getting current currencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 bot.token=5058173124:AAFayuChHbm7wToY8qES_M97P956B6O_Mew
 bot.name=@monconvbot
 bot.webhookUrl=https://money-converter-inline-bot.herokuapp.com/
-source.currency.data.url=https://babki.info/kurs/
-#server.port=#5000
+source.currency.data.url=https://babki.info/kurs/usd
+#server.port=5000
+#https://de7f-5-8-82-182.ngrok.io
+#https://money-converter-inline-bot.herokuapp.com/
