--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 bot.token=5058173124:AAFayuChHbm7wToY8qES_M97P956B6O_Mew
 bot.name=@monconvbot
-bot.webhookUrl=https://de7f-5-8-82-182.ngrok.io
+bot.webhookUrl=https://money-converter-inline-bot.herokuapp.com/
 source.currency.data.url=https://babki.info/kurs/usd
 source.currency.data.file=currencies
-server.port=5000
-#https://de7f-5-8-82-182.ngrok.io
-#https://money-converter-inline-bot.herokuapp.com/
+#server.port=5000
